--- a/mobile/presentation/src/main/AndroidManifest.xml
+++ b/mobile/presentation/src/main/AndroidManifest.xml
@@ -10,5 +10,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 </manifest>
