--- a/mobile/presentation/src/main/AndroidManifest.xml
+++ b/mobile/presentation/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     <application>
         <activity
             android:name="com.gap.presentation.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
