--- a/mobile/presentation/build.gradle
+++ b/mobile/presentation/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.22'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation project(path: ':data')
     implementation project(path: ':domain')
 
