--- a/mobile/presentation/build.gradle
+++ b/mobile/presentation/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation project(path: ':data')
     implementation project(path: ':domain')
-
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
